--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,7 @@ spring:
       default_schema: public
       ddl-auto: update
       globally_quoted_identifiers: true
+      dialect: org.hibernate.dialect.PostgreSQLDialect
     generate-ddl: true
     show-sql: true
 
