--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,8 @@ version: '3.9'
 services:
   postgres:
     image: postgres
-    environment:
-      - POSTGRES_DB=${DB_URL}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    # ports:
-    #   - "5432:5432"
+    env_file:
+      - ./.env
     volumes:
       - "./postgres_data:/var/lib/postgresql/data"
       - "./init.sql:/docker-entrypoint-initdb.d/init.sql"
@@ -20,33 +16,19 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
+    env_file:
+      - ./.env
     ports:
       - "5050:80"
     depends_on:
       - postgres
 
   auth-service:
-    image: auth-service
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: deepjyot/auth-service:latest
     ports:
-      - "8081:8081"
-    environment:
-      - DB_URL=${DB_URL}
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - MONGO_URI=${MONGO_URI}
-      - MONGO_DATABASE=${MONGO_DATABASE}
-      - ZEGO_APP_ID=${ZEGO_APP_ID}
-      - ZEGO_SERVER_SECRET=${ZEGO_SERVER_SECRET}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_S3_BUCKET=${AWS_S3_BUCKET}
-      - AWS_REGION=${AWS_REGION}
+      - "8080:8080"
+    env_file:
+      - ./.env
     depends_on:
       postgres:
         condition: service_healthy
